# audit-probes

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  Makefile  README.md  distill.py  metadata.json  pyproject.toml  requirements.txt  run-audit.ps1  validator.py  vercel.json
.github/workflows/: pages.yml
audit_probes/: __init__.py
audit_probes/cloud_probe/: __init__.py  cloud_probe.py
audit_probes/cyber_audit/: __init__.py  cyber_audit.py
audit_probes/telemetry_pipeline/: telemetry_pipeline.py
configs/: audit_config.yaml
data/samples/: esa_sample.json
docs/: METHODOLOGY.md  PROCESS.md  VERIFICATION.md  architecture.md  index.html  styles.css
paper/arxiv/: README.md  audit_probes_technical_report.tex
schemas/: cloud_probe.schema.json  cyber_audit.schema.json  telemetry_pipeline.json
src/audit_probes/cloud_probe/: README.md
src/audit_probes/cyber_audit/: README.md  __init__.py
src/audit_probes/telemetry_pipeline/: README.md  __init__.py  telemetry_pipeline.py
tests/: test_cloud_probe.py  test_cyber_audit.py  test_schemas.py  test_telemetry_pipeline.py
