[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-probes"
version = "0.1.2"
description = "Audit and instrumentation toolkit spanning cybersecurity, telemetry, and cloud probes."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "intelligentiaomni", email = "intelligentiaomni@users.noreply.github.com" }
]
dependencies = [
  "matplotlib>=3.8",
  "pandas>=2.2",
  "requests>=2.31",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
